@@ -34,7 +34,8 @@ predict( const IndexRange & r1
 		, const OutputConstraint & outConstraint )
 {
 
-	VLOG(2) <<"predicting mfe interactions with seed heuristically in O(n^2) space and time...";
+	#pragma omp critical(intarna_logOutput)
+	{ VLOG(2) <<"predicting mfe interactions with seed heuristically in O(n^2) space and time..."; }
 	// measure timing
 	TIMED_FUNC_IF(timerObj,VLOG_IS_ON(9));
 
