@@ -31,7 +31,8 @@ predict( const IndexRange & r1, const IndexRange & r2
 		, const OutputConstraint & outConstraint )
 {
 
-	VLOG(2) <<"predicting mfe interactions with seed in O(n^2) space and O(n^4) time...";
+	#pragma omp critical(intarna_logOutput)
+	{ VLOG(2) <<"predicting mfe interactions with seed in O(n^2) space and O(n^4) time..."; }
 	// measure timing
 	TIMED_FUNC_IF(timerObj,VLOG_IS_ON(9));
 
