@@ -11,6 +11,7 @@
    * adaption to OutputHandlerIntaRNA1* rename
    + OutputMode::V1_NORMAL : normal version 1.* output
    + threads + validate + getter : OMP max thread number
+   * max sequence number now 99999
  - OutputHandlerIntaRNA1detailed : renamed to OutputHandlerIntaRNA1
  + OutputHandlerIntaRNA1 : former OutputHandlerIntaRNA1detailed
    + detailedOutput : flag to switch between detailed and normal v1 output
@@ -22,6 +23,7 @@
    + OMP : parallelization of target/query processing
    + OMP : exception handling within parallelized loops due to missing OMP 
      exception forwarding
+   * final exception handling now always returns -1 (even in debug mode)
  * OutputHandlerCsv : 
    + E_loops output
    + OMP : ensure no parallel write to output stream
